<resources>
    <string name="app_name">AndroidFoodXpress</string>
    <string name="your_name">Your Name</string>
    <string name="your_address">Your Address</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_food_deatil">Food Detail</string>
    <string name="popular_categories">Popular Categories</string>
    <string name="best_deals">best deals</string>
    <string name="menu_menu">Categories</string>
    <string name="menu_food_list">Food List</string>
    <string name="name_of_food">Name of food</string>
    <string name="nrs_250">NRS 250</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="food_name">Food Name</string>
    <string name="description">Description</string>
    <string name="_1000">1000</string>
    <string name="show_comment">Show Comment</string>
    <string name="todo">TODO</string>
    <string name="please_write_something">Please write something</string>
    <string name="name">Name</string>
    <string name="date">date</string>
    <string name="menu_cart">Cart</string>
    <string name="sign_out">Sign out</string>
    <string name="size">Size</string>
    <string name="restaurant">Restaurant</string>

</resources>