<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group >
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
    </group>

    <group>
        <item
            android:id="@+id/nav_menu"
            android:icon="@drawable/ic_baseline_restaurant_menu_24"
            android:title="@string/menu_menu" />
    </group>

    <group>

        <item
            android:id="@+id/nav_restaurant_list"
            android:icon="@drawable/ic_baseline_restaurant_24"
            android:title="@string/restaurant" />
    </group>

    <group>
        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/ic_baseline_shopping_cart_24"
            android:title="@string/menu_cart"/>
    </group>



    <group>

        <item
            android:id="@+id/nav_food_list"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/menu_food_list" />
    </group>

    <group>
        <item
            android:id="@+id/nav_sign_out"
            android:icon="@drawable/ic_baseline_exit_to_app_24"
            android:title="@string/sign_out"/>
    </group>
</menu>